[tool.poetry]
name = "cryptofeed-werks"
version = "0.1.2"
description = "Pipeline for live data from cryptocurrency exchanges"
authors = ["Alex <globophobe@gmail.com>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/globophobe/cryptofeed-werks"
repository = "https://github.com/globophobe/cryptofeed-werks"
keywords = ["cryptocurrency", "trading"]
classifiers = [
    "Operating System :: OS Independent",
]
packages = [{ include = "cryptofeed_werks" }]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
numpy = "*"
google-cloud-bigquery = { version = "*", optional = true }
google-cloud-bigquery-storage = { version = "*", optional = true }
google-cloud-pubsub = { version = "*", optional = true }
google-cloud-firestore = { version = "*", optional = true }
sentry-sdk = { version = "*", optional = true }
cryptofeed = "*"
python-decouple = "*"

[tool.poetry.dev-dependencies]
black = "*"
flake8 = "*"
isort = "*"
invoke = "*"

[tool.poetry.extras]
all = ["google-cloud-bigquery", "google-cloud-bigquery-storage", "google-cloud-pubsub", "google-cloud-firestore", "sentry-sdk"]
bigquery = ["google-cloud-bigquery", "google-cloud-bigquery-storage"]
firestore = ["google-cloud-firestore"]
sentry = ["sentry-sdk"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
